ScriptExecutor method modified